@@ -262,7 +262,7 @@ public class VisorGatewayTask implements ComputeTask<Object[], Object> {
                 byte[] res = new byte[els.length];
 
                 for (int i = 0; i < els.length; i ++)
-                    res[i] = new Byte(els[i]);
+                    res[i] =  Byte.valueOf(els[i]);
 
                 return res;
             }
@@ -342,7 +342,7 @@ public class VisorGatewayTask implements ComputeTask<Object[], Object> {
                     nids.add(node.id());
             }
             else {
-                String[] items = nidsArg.split(",");
+                String[] items = nidsArg.split(";");
 
                 nids = new ArrayList<>(items.length);
 
